<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.vnwarriors.tastyclarify.ui.activity.authentication.LoginViewModel" />

        <variable
            name="viewModel"
            type="LoginViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.activity.authentication.LoginActivity">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#ffffff"
            android:fitsSystemWindows="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:src="@drawable/flavor" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                app:errorEnabled="true"
                app:error="@{viewModel.emailError}">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/gray"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="#828282"
                    app:textChange="@{viewModel.emailChange}"
                    tools:text="asdasdad" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                app:error="@{viewModel.passwordError}"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/gray"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColor="#828282"
                    tools:text="asdasdad"
                    app:textChange="@{viewModel.passwordChange}"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Login Button -->

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="20dip"
                android:background="#da3a25"
                android:text="@string/btn_login"
                android:enabled="@{viewModel.registerBtnState}"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="#cecece" />

            <!-- Link to Login Screen -->
            <ViewAnimator
                android:id="@+id/vaLoginState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inAnimation="@android:anim/fade_in"
                android:outAnimation="@android:anim/fade_out"
                >
                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="20dip"
                    android:background="@null"
                    android:text="@string/btn_link_to_register"
                    android:textAllCaps="false"
                    android:textColor="#9a635c"
                    android:textSize="15dp" />
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone" />
            </ViewAnimator>

        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>
</layout>