<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.authentication.userprofile.ProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#eeeeee"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/profile"
                app:civ_border_color="#FFffffff"
                app:civ_border_width="2dp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:id="@+id/tvProfileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="profile name"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="Change email"
                android:textColor="#8e8e8e" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:cardBackgroundColor="#ffffff">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp">

                        <EditText
                            android:id="@+id/new_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:backgroundTint="@color/gray"
                            android:focusableInTouchMode="true"
                            android:hint="@string/hint_new_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="#828282"
                            tools:text="asdasdad" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/changeEmail"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginBottom="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/btn_change"
                        android:textColor="@android:color/white" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--<android.support.v7.widget.CardView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="8dp"-->
            <!--android:layout_marginLeft="8dp"-->
            <!--android:layout_marginRight="8dp"-->
            <!--app:cardBackgroundColor="#ffffff">-->

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="vertical">-->

            <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="8dp"-->
            <!--android:layout_marginRight="8dp"-->
            <!--android:layout_marginTop="8dp">-->

            <!--<EditText-->
            <!--android:id="@+id/password"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:backgroundTint="@color/gray"-->
            <!--android:focusableInTouchMode="true"-->
            <!--android:hint="@string/hint_password"-->
            <!--android:inputType="textPassword"-->
            <!--android:maxLines="1"-->
            <!--android:textColor="#828282"-->
            <!--tools:text="asdasdad" />-->
            <!--</android.support.design.widget.TextInputLayout>-->
            <!--</LinearLayout>-->

            <!--</android.support.v7.widget.CardView>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="Change Password"
                android:textColor="#8e8e8e" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:cardBackgroundColor="#ffffff">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp">

                        <EditText
                            android:id="@+id/newPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:backgroundTint="@color/gray"
                            android:focusableInTouchMode="true"
                            android:hint="@string/new_pass"
                            android:imeActionId="@+id/login"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="#828282"
                            tools:text="asdasdad" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/changePass"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginBottom="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/btn_change"
                        android:textColor="@android:color/white" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="Reset password by email"
                android:textColor="#8e8e8e" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:cardBackgroundColor="#ffffff">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp">

                        <EditText
                            android:id="@+id/old_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:backgroundTint="@color/gray"
                            android:focusableInTouchMode="true"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="#828282"
                            tools:text="asdasdad" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/send"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginBottom="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/btn_send"
                        android:textColor="@android:color/white" />
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <!--<EditText-->
            <!--android:id="@+id/newPassword"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:focusableInTouchMode="true"-->
            <!--android:hint="@string/new_pass"-->
            <!--android:imeActionId="@+id/login"-->
            <!--android:imeOptions="actionUnspecified"-->
            <!--android:inputType="textPassword"-->
            <!--android:maxLines="1"-->
            <!--android:singleLine="true" />-->


            <!--<Button-->
            <!--android:id="@+id/remove"-->
            <!--style="?android:textAppearanceSmall"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:background="@color/colorPrimaryDark"-->
            <!--android:text="@string/btn_remove"-->
            <!--android:textColor="@android:color/white" />-->

            <!--<include layout="@layout/profile_devider" />-->

            <!--<Button-->
            <!--android:id="@+id/change_email_button"-->
            <!--style="?android:textAppearanceSmall"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="25dp"-->
            <!--android:layout_marginRight="25dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:text="@string/change_email" />-->

            <!--<Button-->
            <!--android:id="@+id/change_password_button"-->
            <!--style="?android:textAppearanceSmall"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="25dp"-->
            <!--android:layout_marginRight="25dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:text="@string/change_password" />-->

            <!--<Button-->
            <!--android:id="@+id/sending_pass_reset_button"-->
            <!--style="?android:textAppearanceSmall"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="25dp"-->
            <!--android:layout_marginRight="25dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:background="@color/colorPrimary"-->
            <!--android:text="@string/send_password_reset_email" />-->

            <!--<Button-->
            <!--android:id="@+id/remove_user_button"-->
            <!--style="?android:textAppearanceSmall"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="25dp"-->
            <!--android:layout_marginRight="25dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:background="@color/colorPrimary"-->
            <!--android:text="@string/remove_user" />-->

            <Button
                android:id="@+id/sign_out"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/btn_sign_out"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>